added filter screen

--- a/app/src/main/res/navigation/nav_main_graph.xml
+++ b/app/src/main/res/navigation/nav_main_graph.xml
@@ -57,6 +57,9 @@
         <action
             android:id="@+id/action_dictionaryWordsFragment_to_addDictionaryWordFragment"
             app:destination="@id/addDictionaryWordFragment" />
+        <action
+            android:id="@+id/action_dictionaryWordsFragment_to_dictionaryWordsFilterFragment"
+            app:destination="@id/dictionaryWordsFilterFragment" />
     </fragment>
 
     <fragment
@@ -156,4 +159,14 @@
         android:name="my.dictionary.free.view.user.dictionary.words.tags.AddWordTagsFragment"
         android:label="WordCategoryFragment"
         tools:layout="@layout/fragment_add_word_tags" />
+    <fragment
+        android:id="@+id/dictionaryWordsFilterFragment"
+        android:name="my.dictionary.free.view.user.dictionary.words.filter.DictionaryWordsFilterFragment"
+        android:label="DictionaryWordsFilterFragment"
+        tools:layout="@layout/fragment_dictionary_words_filter" >
+        <argument
+            android:name="my.dictionary.free.view.user.dictionary.words.filter.DictionaryWordsFilterFragment.BUNDLE_DICTIONARY"
+            android:defaultValue="@null"
+            app:argType="my.dictionary.free.domain.models.dictionary.Dictionary" />
+    </fragment>
 </navigation>
