--- a/app/src/main/res/menu/menu_dictionary_words.xml
+++ b/app/src/main/res/menu/menu_dictionary_words.xml
@@ -9,6 +9,12 @@
         app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|always" />
     <item
+        android:id="@+id/nav_filter"
+        android:icon="@drawable/ic_filter"
+        android:iconTint="@color/white"
+        android:title="@string/filter"
+        app:showAsAction="always" />
+    <item
         android:id="@+id/nav_add_word"
         android:icon="@drawable/ic_baseline_add_24"
         android:iconTint="@color/white"
