--- a/app/src/main/res/menu/menu_words_choose.xml
+++ b/app/src/main/res/menu/menu_words_choose.xml
@@ -7,7 +7,12 @@
         android:iconTint="@color/white"
         android:title="@string/add"
         app:showAsAction="always" />
-
+    <item
+        android:id="@+id/nav_filter"
+        android:icon="@drawable/ic_filter"
+        android:iconTint="@color/white"
+        android:title="@string/filter"
+        app:showAsAction="always" />
     <item
         android:id="@+id/nav_add_word"
         android:icon="@drawable/ic_baseline_save_24"
