--- a/app/src/main/res/layout/fragment_quiz_detail.xml
+++ b/app/src/main/res/layout/fragment_quiz_detail.xml
@@ -106,6 +106,7 @@
                 android:orientation="horizontal">
 
                 <androidx.appcompat.widget.AppCompatTextView
+                    android:id="@+id/words_count_text_view"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center_vertical"
