--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -8,6 +8,7 @@
     <color name="gray_500">#607D8B</color>
     <color name="light_blue_200">#81D4FA</color>
     <color name="yellow_500">#FFEB3B</color>
+    <color name="yellow_700">#FBC02D</color>
     <color name="green_a_400">#00E676</color>
     <color name="green_a_700">#00C853</color>
     <color name="red">#E51400</color>
