--- a/app/src/main/res/layout/item_word.xml
+++ b/app/src/main/res/layout/item_word.xml
@@ -6,13 +6,12 @@
     android:layout_height="wrap_content"
     android:layout_marginBottom="1dp"
     android:gravity="center_vertical"
-    android:orientation="vertical"
-    android:padding="16dp">
+    android:orientation="vertical">
 
     <androidx.appcompat.widget.LinearLayoutCompat
-        android:id="@+id/title_container"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:gravity="center_vertical"
         android:orientation="horizontal">
 
         <androidx.appcompat.widget.AppCompatTextView
@@ -20,6 +19,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_weight="1"
+            android:padding="16dp"
             android:gravity="center_vertical"
             android:textColor="@color/main_text"
             android:textSize="16dp"
@@ -28,8 +28,8 @@
 
         <androidx.appcompat.widget.AppCompatImageView
             android:id="@+id/drop_down_image"
-            android:layout_width="24dp"
-            android:layout_height="24dp"
+            android:layout_width="40dp"
+            android:layout_height="40dp"
             android:src="@drawable/ic_baseline_arrow_drop_down_24"
             android:visibility="gone"
             tools:visibility="visible" />
@@ -38,21 +38,34 @@
     <androidx.appcompat.widget.LinearLayoutCompat
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:paddingLeft="9dp"
         android:orientation="vertical">
+
+        <androidx.appcompat.widget.AppCompatTextView
+            android:id="@+id/phonetic"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:textColor="@color/secondary_text"
+            android:paddingHorizontal="16dp"
+            android:paddingBottom="9dp"
+            android:textSize="16dp"
+            android:visibility="gone"
+            tools:visibility="visible"
+            tools:text="[Hello]" />
 
         <androidx.appcompat.widget.AppCompatTextView
             android:id="@+id/translated_word"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:textColor="@color/main_text"
+            android:paddingHorizontal="16dp"
+            android:paddingBottom="9dp"
             android:textSize="16dp"
             tools:text="- Привіт..." />
 
         <androidx.appcompat.widget.LinearLayoutCompat
             android:id="@+id/translated_container"
             android:layout_width="match_parent"
-            android:layout_height="match_parent"
+            android:layout_height="wrap_content"
             android:orientation="vertical" />
     </androidx.appcompat.widget.LinearLayoutCompat>
 </androidx.appcompat.widget.LinearLayoutCompat>
